# hpcourse

./: .gitmodules  HPLab.sln
GorbunovSA/: CMakeLists.txt  producer_consumer.cpp
HPLab/: HPLab.csproj  Program.cs
HPLab/Enities/: Future.cs  SimpleThreadScheduler.cs
HPLab/Properties/: AssemblyInfo.cs
ReznickSA/: Makefile  main.cpp
cs_pp/: lab  producer_consumer.cpp
csc/2015/: README
csc/2015/any/any_1_kotlin/: README.md
csc/2015/ees/ees_1_cpp/: CMakeLists.txt  app.cpp  future.h  log.cpp  log.h  state.cpp  state.h  task_queue.h  test.cpp  thread_pool.cpp  thread_pool.h
csc/2015/efs/efs_1_cpp/: .gitignore  CMakeLists.txt  ThreadPool.cpp  ThreadPool.h  console.cpp
csc/2015/efs/efs_1_cpp/tests/: dfs.h  interruption.h  load_distribution.h  main.cpp  mergesort.h  tests.h
csc/2015/gsi/gsi_1_java/: .gitignore  README.md
csc/2015/mma/mma_1_java/: .gitignore
csc/2015/nmy/: pom.xml
csc/2015/oos/oos_1_java/: log4j.properties  pom.xml
csc/2015/pva/pva_1_java/: ReadMe.md
csc/2015/tas/thread_pool/: CMakeLists.txt  build.py
csc/2015/tas/thread_pool/thread_pool/: CMakeLists.txt  main.cpp  thread_pool.cpp  thread_pool.hpp
csc/2015/tas/thread_pool/thread_pool/command_line_parser/: command_line_parser.cpp  command_line_parser.hpp
csc/2015/tas/thread_pool/thread_pool/thread_pool/: thread_pool.cpp  thread_pool.hpp
csc/2015/vma/vma_1_csharp/: temp.txt  vma_1_csharp.sln
csc/2015/zdi/zdi_1_java/: pom.xml
csc/2016/: README
csc/2016/Mikhail-M/TaskServer/: pom.xml
csc/2016/aty/: README.txt
csc/2016/aty/HPS/: README.txt
csc/2016/cmo/cmo_1_java/: pom.xml
csc/2016/csc/: pom.xml
csc/2016/dva/dva_1/: pom.xml
csc/2016/esun/: pom.xml
csc/2016/exampleProto2/: pom.xml
csc/2016/geo/: pom.xml
csc/2016/grk/grk_1_java/: pom.xml
csc/2016/hps/: Makefile  environment_variables.mk
csc/2016/hps/core/: Makefile
csc/2016/ilya-afanasev/task1/: CMakeLists.txt  main.cpp  protocol.pb.cc  protocol.pb.h  server.cpp  server.h  session.cpp  session.h  thread_pool.cpp  thread_pool.h
csc/2016/jdv/: pom.xml
csc/2016/kad/kad_0_java/: pom.xml
csc/2016/kai/: pom.xml
csc/2016/kas/kas_1_java/: README.md
csc/2016/kmp/kmp_1_cpp/: CMakeLists.txt  dispatcher.cpp  dispatcher.h  error.cpp  error.h  protocol.pb.cc  protocol.pb.h  server.cpp  socket_init.cpp  socket_init.h  socket_rw.cpp  socket_rw.h  worker.cpp  worker.h
csc/2016/kps/1/: Readme.md  build.xml
csc/2016/kve/: .gitignore
csc/2016/kve/src/: Main.kt
csc/2016/kyav/kyav_1/: Main.java
csc/2016/myServer/Server/: pom.xml
csc/2016/ndp/ndp_1_java/: README.md
csc/2016/oid/: pom.xml
csc/2016/rin/rin_1_java/: README.md  pom.xml
csc/2016/sns/sns_1/: build.gradle
csc/2016/toe/toe_1_java/: pom.xml
csc/2016/uvi/: readme.md
csc/2016/uvi/boost_client/: CMakeLists.txt  client.cpp  client.hpp  main.cpp
csc/2016/uvi/boost_server/: CMakeLists.txt  data_handler.cpp  data_handler.hpp  main.cpp  protocol.proto  server.cpp  task.cpp  task.hpp  task_manager.cpp  task_manager.hpp
csc/2016/uvi/src/: CMakeLists.txt  client.cpp  client.hpp  client_main.cpp  main.cpp  server.cpp  server.hpp  task.cpp  task.hpp  task_manager.cpp  task_manager.hpp  tcp_client.cpp  tcp_server.cpp
csc/2016/uvi/src/boost_client/: client.cpp  main.cpp
csc/2016/uvi/src/boost_server/: data_handler.hpp  main.cpp  protocol.pb.cc  protocol.pb.h  server.cpp  server.hpp  task.cpp  task.hpp  task_manager.cpp  task_manager.hpp
csc/2016/veu/: pom.xml
csc/2016/veu/veu/: pom.xml
csc/2017/: README.md
csc/2017/1.Pthread/: README.md  Template.cpp  main.cpp
csc/2017/1.Pthread/AT/: CMakeLists.txt  main.cpp
csc/2017/1.Pthread/BerezinAI/: Template.cpp
csc/2017/1.Pthread/ChernyaevAV/: CMakeLists.txt  ProducerConsumer.cpp
csc/2017/1.Pthread/DAS/: main.cpp
csc/2017/1.Pthread/IA Kremnev/: CMakeLists.txt  customer_interruptor.cpp
csc/2017/1.Pthread/SNA/: code.cpp
csc/2017/1.Pthread/ShkviroIA/: main.cpp
csc/2017/1.Pthread/StepaMalkevich/: CMakeLists.txt  main.cpp
csc/2017/1.Pthread/TimofeyTalenfeld/: Makefile  main.cpp
csc/2017/1.Pthread/TuryshevaK/: solution.cpp
csc/2017/1.Pthread/VakushkinAA/: threads.cpp
csc/2017/1.Pthread/VasinaDV/: Makefile  main.cpp
csc/2017/1.Pthread/Yanenko_Aleksandr/: main.cpp
csc/2017/1.Pthread/Yekhmenin.S.A/: Makefile  main.cpp
csc/2017/1.Pthread/ZGA/: CMakeLists.txt  main.cpp
csc/2017/1.Pthread/ZherevchukSV/: Makefile  main.cpp
csc/2017/1.Pthread/ajs/: Makefile  main.cpp
csc/2017/1.Pthread/b_salyakhutdinov/: Makefile  main.cpp
csc/2017/1.Pthread/baya/: CMakeLists.txt  main.cpp
csc/2017/1.Pthread/bpa/: MakeFile  Makefile  main.cpp
csc/2017/1.Pthread/emoiseenko/: main.cpp
csc/2017/1.Pthread/fse/: main.cpp
csc/2017/1.Pthread/gladnik/: pthr_hw.cpp
csc/2017/1.Pthread/gordeev_so/: CMakeLists.txt  main.cpp
csc/2017/1.Pthread/hw1/: main.cpp
csc/2017/1.Pthread/kharitonov/: CMakeLists.txt  main.cpp
csc/2017/1.Pthread/lae/: main.cpp
csc/2017/1.Pthread/mikhalev_andrey/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lab  pthread_consumer_producer.cpp
csc/2017/1.Pthread/mne/: Makefile  Template.cpp  gdblab
csc/2017/1.Pthread/pag/: CMakeLists.txt  main.cpp
csc/2017/1.Pthread/vnazarenko/: CMakeLists.txt  main.cpp
csc/2017/2.LockFreeSet/: LockFreeList.java  LockFreeSet.java  LockFreeSetImpl.java  README.md
csc/2017/3.TBBFlowGraph/: README.md  Template.cpp  image_utils.py
csc/2018/: README.md
csc/2018/1.Pthread/: README.md  Template.cpp
csc/2018/2.LockFreeSet/: LockFreeSetImpl.java  README.md
csc/2019/: README.md
csc/2019/1.Pthread/: CMakeLists.txt  README.md  SlezkinTask1.cpp  template.cpp
csc/2019/2.LockFreeSet/: LockFreeSet.java  LockFreeSetImpl.java  LockFreeSetImplTest.java  README.md
kyav/client/: Client.java
kyav/server/: Controller.java  Server.java
kyav/server/processingThreads/: InvalidTaskParameterException.java  RequestProcessingThread.java  SubmitTaskProcessingThread.java  SubscribeTaskProcessingThread.java  TasksListProcessingThread.java
kyav/utils/: Task.java  TaskParameter.java
titova/: lab  producer_consumer.cpp
(+866 files in other folders)
